feat:authentication configuration

--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -9,3 +9,5 @@ spring.datasource.h2.console.enabled=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
