feat: email service

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -9,3 +9,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=465
+spring.mail.username=4814cd22e40a04
+spring.mail.password=4e7bc49d48ca94
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
