--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 
